# openbird

./: CLAUDE.md  README.md  SOCIAL.md  index.js  package.json  pyproject.toml
guides/: aesa.md  counter-arguments.md  eccnet.md  your-rights.md
openbird/: __init__.py  cli.py
openbird.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
skills/: analyze-rejection.md  escalate.md  file-claim.md
templates/: aesa-complaint.md  escalation-notice.md  initial-claim.md
